--- a/app/src/main/res/layout/fragment_last_askitem.xml
+++ b/app/src/main/res/layout/fragment_last_askitem.xml
@@ -40,6 +40,7 @@
                     android:drawablePadding="5dp"
                     android:drawableTint="@color/white"
                     android:gravity="center"
+                    android:lines="1"
                     android:text="@string/latest_request"
                     android:textColor="@color/white"
                     android:textSize="16sp"
@@ -65,6 +66,7 @@
                     android:layout_gravity="center"
                     android:gravity="center"
                     android:text="Refrigirator"
+                    android:lines="1"
                     android:textSize="19sp"
                     android:textStyle="bold" />
 
