--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -20,69 +20,82 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0"/>
 
-    <com.google.android.material.imageview.ShapeableImageView
-        android:id="@+id/profile_IMG_picture"
-        android:layout_width="120dp"
-        android:layout_height="120dp"
-        android:clickable="true"
-        android:foreground="?attr/selectableItemBackground"
-        android:scaleType="fitXY"
-        android:src="@drawable/ic_profile"
-        app:layout_constraintBottom_toBottomOf="@+id/profile_IMG_font"
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        app:layout_constraintBottom_toTopOf="@+id/linearLayout3"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintHorizontal_bias="0.1"
-        app:layout_constraintVertical_bias="0.1"
-        app:strokeColor="@color/white"
-        app:strokeWidth="5dp" />
-
-    <LinearLayout
-        android:id="@+id/linearLayout2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
-        app:layout_constraintBottom_toBottomOf="@+id/profile_IMG_font"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/profile_IMG_picture"
-        app:layout_constraintVertical_bias="0.1"
-        app:layout_constraintHorizontal_bias="0.11"
         app:layout_constraintTop_toTopOf="parent">
 
-        <com.google.android.material.textview.MaterialTextView
-            android:id="@+id/profile_LBL_name"
+
+        <com.google.android.material.imageview.ShapeableImageView
+            android:id="@+id/profile_IMG_picture"
+            android:layout_width="120dp"
+            android:layout_height="120dp"
+            android:clickable="true"
+            android:foreground="?attr/selectableItemBackground"
+            android:scaleType="fitXY"
+            android:src="@drawable/ic_profile"
+            android:layout_marginStart="5dp"
+            app:layout_constraintBottom_toBottomOf="@+id/profile_IMG_font"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.1"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.1"
+            app:strokeColor="@color/white"
+            app:strokeWidth="5dp" />
+
+        <LinearLayout
+            android:id="@+id/linearLayout2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/user_name"
-            android:textColor="@color/white"
-            android:textSize="25sp"
-            android:textStyle="bold" />
+            android:orientation="vertical"
+            android:layout_marginStart="5dp"
+            app:layout_constraintBottom_toBottomOf="@+id/profile_IMG_font"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.11"
+            app:layout_constraintStart_toEndOf="@+id/profile_IMG_picture"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.1">
 
-        <com.google.android.material.textview.MaterialTextView
-            android:id="@+id/profile_LBL_city"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/user_city"
-            android:textColor="@color/white"
-            android:textSize="20sp" />
+            <com.google.android.material.textview.MaterialTextView
+                android:id="@+id/profile_LBL_name"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/user_name"
+                android:textColor="@color/white"
+                android:textSize="25sp"
+                android:textStyle="bold" />
 
-        <com.google.android.material.textview.MaterialTextView
-            android:id="@+id/profile_LBL_phone"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/user_phone"
-            android:textColor="@color/white"
-            android:textSize="20sp" />
+            <com.google.android.material.textview.MaterialTextView
+                android:id="@+id/profile_LBL_city"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/user_city"
+                android:textColor="@color/white"
+                android:textSize="20sp" />
 
-        <com.google.android.material.textview.MaterialTextView
-            android:id="@+id/profile_LBL_mail"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:maxLines="1"
-            android:text="@string/user_mail"
-            android:textColor="@color/white"
-            android:textSize="20sp" />
+            <com.google.android.material.textview.MaterialTextView
+                android:id="@+id/profile_LBL_phone"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/user_phone"
+                android:textColor="@color/white"
+                android:textSize="20sp" />
 
+            <com.google.android.material.textview.MaterialTextView
+                android:id="@+id/profile_LBL_mail"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:maxLines="1"
+                android:text="@string/user_mail"
+                android:textColor="@color/white"
+                android:textSize="20sp" />
+
+        </LinearLayout>
     </LinearLayout>
 
     <LinearLayout
@@ -117,24 +130,23 @@
 
         <com.google.android.material.tabs.TabLayout
             android:id="@+id/profile_LAY_tab"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
             app:tabMode="scrollable"
             android:elevation="20dp"
-            android:layout_marginStart="8dp"
-            android:layout_marginEnd="8dp"
             app:tabIndicatorColor="@color/white"
             android:background="@color/colorPrimary"
             app:tabSelectedTextColor="@color/white">
 
+
         <com.google.android.material.tabs.TabItem
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
             android:text="@string/items_i_need" />
 
         <com.google.android.material.tabs.TabItem
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
             android:text="@string/items_im_giving"
             />
 
