--- a/app/src/main/res/layout/activity_item_details.xml
+++ b/app/src/main/res/layout/activity_item_details.xml
@@ -119,7 +119,7 @@
         android:layout_height="50dp"
         android:layout_marginStart="15dp"
         android:layout_marginEnd="15dp"
-        android:text="Contact Giver"
+        android:text="@string/contact_giver"
         android:textAllCaps="false"
         android:textStyle="bold"
         app:cornerRadius="30dp"
