--- a/app/src/main/res/layout/giveitem_recyclerview_row.xml
+++ b/app/src/main/res/layout/giveitem_recyclerview_row.xml
@@ -10,6 +10,7 @@
         android:id="@+id/giveRow_giveitem_row"
         android:layout_width="match_parent"
         android:layout_height="130dp"
+        android:paddingEnd="5dp"
         android:layout_alignParentTop="true"
         android:clickable="true"
         android:foreground="?attr/selectableItemBackground"
@@ -37,7 +38,8 @@
                 android:id="@+id/giveRow_LAY_nameCondDate"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="10dp"
+                android:layout_marginStart="10dp"
+                android:layout_marginEnd="5dp"
                 android:orientation="vertical"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
