--- a/app/src/main/res/layout/activity_new_ask_item.xml
+++ b/app/src/main/res/layout/activity_new_ask_item.xml
@@ -7,33 +7,33 @@
 
 
     <com.google.android.material.textfield.TextInputLayout
-        android:maxLines="1"
-        app:autoSizeTextType="uniform"
-        app:autoSizeStepGranularity="1sp"
         android:id="@+id/editItem_EDT_AskitemName"
         style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginLeft="10dp"
+        android:layout_marginTop="15dp"
+        android:layout_marginRight="10dp"
         android:gravity="center"
         android:hint="@string/item_name"
+        android:maxLines="1"
+        android:padding="15dp"
         android:textColorHint="@color/black"
+        app:autoSizeStepGranularity="1sp"
+        app:autoSizeTextType="uniform"
         app:boxCornerRadiusBottomEnd="15dp"
         app:boxCornerRadiusBottomStart="15dp"
         app:boxCornerRadiusTopEnd="15dp"
         app:boxCornerRadiusTopStart="15dp"
-        android:layout_marginTop="15dp"
         app:boxStrokeColor="@color/colorPrimary"
-        app:startIconDrawable="@drawable/ic_donation_start"
-        app:startIconTint="@color/colorPrimary"
-        android:layout_marginLeft="10dp"
-        android:layout_marginRight="10dp"
-        android:padding="15dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.526"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.023">
+        app:layout_constraintVertical_bias="0.023"
+        app:startIconDrawable="@drawable/ic_donation_start"
+        app:startIconTint="@color/colorPrimary">
 
         <com.google.android.material.textfield.TextInputEditText
             android:layout_width="match_parent"
@@ -43,38 +43,37 @@
     </com.google.android.material.textfield.TextInputLayout>
 
     <com.google.android.material.textfield.TextInputLayout
-        app:autoSizeTextType="uniform"
-        app:autoSizeStepGranularity="1sp"
         android:id="@+id/editItem_EDT_askItemDescription"
         style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
         android:layout_width="match_parent"
         android:layout_height="140dp"
         android:layout_marginLeft="10dp"
         android:layout_marginRight="10dp"
-        android:gravity="center"
+        android:drawablePadding="10dp"
+        android:elevation="10dp"
         android:hint="@string/item_description"
+        android:padding="15dp"
         android:textColorHint="@color/black"
+        app:autoSizeStepGranularity="1sp"
+        app:autoSizeTextType="uniform"
         app:boxCornerRadiusBottomEnd="15dp"
         app:boxCornerRadiusBottomStart="15dp"
         app:boxCornerRadiusTopEnd="15dp"
         app:boxCornerRadiusTopStart="15dp"
         app:boxStrokeColor="@color/colorPrimary"
-        app:startIconDrawable="@drawable/ic_description"
-        app:startIconTint="@color/colorPrimary"
-        android:padding="15dp"
-        android:elevation="10dp"
-        android:drawablePadding="10dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.526"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/editItem_EDT_AskitemName"
-        app:layout_constraintVertical_bias="0.02">
+        app:layout_constraintVertical_bias="0.02"
+        app:startIconDrawable="@drawable/ic_description"
+        app:startIconTint="@color/colorPrimary">
 
         <com.google.android.material.textfield.TextInputEditText
             android:layout_width="match_parent"
             android:layout_height="100dp"
-            android:inputType="textCapSentences" />
+            android:inputType="textCapSentences|textMultiLine|textLongMessage" />
 
     </com.google.android.material.textfield.TextInputLayout>
 
@@ -118,8 +117,8 @@
         android:layout_marginLeft="10dp"
         android:layout_marginRight="10dp"
         android:layout_marginBottom="16dp"
-        app:cornerRadius="15dp"
         android:text="@string/submit"
+        app:cornerRadius="15dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
