--- a/app/src/main/res/layout/activity_new_give_item.xml
+++ b/app/src/main/res/layout/activity_new_give_item.xml
@@ -12,9 +12,9 @@
         android:layout_height="199dp"
         android:background="@drawable/photo_empty_frame"
         android:clickable="true"
-        android:scaleType="fitXY"
         android:focusable="true"
         android:foreground="?attr/selectableItemBackground"
+        android:scaleType="fitXY"
         app:layout_constraintBottom_toTopOf="@+id/editItem_EDT_itemName"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.497"
@@ -24,9 +24,6 @@
 
 
     <com.google.android.material.textfield.TextInputLayout
-        android:maxLines="1"
-        app:autoSizeTextType="uniform"
-        app:autoSizeStepGranularity="1sp"
         android:id="@+id/editItem_EDT_itemName"
         style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
         android:layout_width="match_parent"
@@ -35,6 +32,8 @@
         android:hint="@string/item_name"
         android:padding="15dp"
         android:textColorHint="@color/black"
+        app:autoSizeStepGranularity="1sp"
+        app:autoSizeTextType="uniform"
         app:boxCornerRadiusBottomEnd="15dp"
         app:boxCornerRadiusBottomStart="15dp"
         app:boxCornerRadiusTopEnd="15dp"
@@ -57,8 +56,6 @@
     </com.google.android.material.textfield.TextInputLayout>
 
     <com.google.android.material.textfield.TextInputLayout
-        app:autoSizeTextType="uniform"
-        app:autoSizeStepGranularity="1sp"
         android:id="@+id/editItem_EDT_itemDescription"
         style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
         android:layout_width="match_parent"
@@ -66,8 +63,11 @@
         android:elevation="10dp"
         android:gravity="center"
         android:hint="@string/item_description"
+        android:inputType="textMultiLine|textLongMessage"
         android:padding="15dp"
         android:textColorHint="@color/black"
+        app:autoSizeStepGranularity="1sp"
+        app:autoSizeTextType="uniform"
         app:boxCornerRadiusBottomEnd="15dp"
         app:boxCornerRadiusBottomStart="15dp"
         app:boxCornerRadiusTopEnd="15dp"
@@ -85,7 +85,7 @@
         <com.google.android.material.textfield.TextInputEditText
             android:layout_width="match_parent"
             android:layout_height="100dp"
-            android:inputType="textCapSentences" />
+            android:inputType="textCapSentences|textMultiLine|textLongMessage" />
 
     </com.google.android.material.textfield.TextInputLayout>
 
@@ -117,16 +117,16 @@
             android:padding="15dp" />
 
         <CheckBox
-            android:maxLines="1"
-            app:autoSizeTextType="uniform"
-            app:autoSizeStepGranularity="1sp"
             android:id="@+id/editItem_CHK_askIsDiscrete"
             android:layout_width="wrap_content"
             android:layout_height="53dp"
             android:checked="true"
+            android:maxLines="1"
             android:text="@string/free_item"
             android:textColor="@color/black"
-            android:textSize="15sp" />
+            android:textSize="15sp"
+            app:autoSizeStepGranularity="1sp"
+            app:autoSizeTextType="uniform" />
 
 
     </LinearLayout>
@@ -169,8 +169,8 @@
         android:layout_height="wrap_content"
         android:layout_marginLeft="10dp"
         android:layout_marginRight="10dp"
-        app:cornerRadius="15dp"
         android:text="@string/submit"
+        app:cornerRadius="15dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
