--- a/app/src/main/res/layout/askitem_recyclerview_row.xml
+++ b/app/src/main/res/layout/askitem_recyclerview_row.xml
@@ -16,8 +16,7 @@
         app:cardElevation="5dp"
         app:cardMaxElevation="0dp"
         app:cardPreventCornerOverlap="false"
-        app:cardUseCompatPadding="true"
-        >
+        app:cardUseCompatPadding="true">
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
@@ -26,10 +25,10 @@
             <com.google.android.material.imageview.ShapeableImageView
                 android:id="@+id/askRow_IMG_itemCategoryPic"
                 android:layout_width="130dp"
-                android:padding="10dp"
                 android:layout_height="match_parent"
-                android:scaleType="fitXY"
                 android:background="@color/white"
+                android:padding="10dp"
+                android:scaleType="fitXY"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.0"
@@ -40,7 +39,8 @@
                 android:id="@+id/askRow_LAY_nameCityDate"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="10dp"
+                android:layout_marginStart="10dp"
+                android:layout_marginEnd="5dp"
                 android:orientation="vertical"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -49,15 +49,15 @@
                 app:layout_constraintTop_toTopOf="parent">
 
                 <com.google.android.material.textview.MaterialTextView
-                    android:maxLines="1"
-                    app:autoSizeTextType="uniform"
-                    app:autoSizeStepGranularity="1sp"
                     android:id="@+id/askRow_LBL_itemName"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:maxLines="1"
                     android:text="Microwave"
                     android:textSize="23sp"
-                    android:textStyle="bold" />
+                    android:textStyle="bold"
+                    app:autoSizeStepGranularity="1sp"
+                    app:autoSizeTextType="uniform" />
 
                 <LinearLayout
                     android:id="@+id/askRow_LAY_cityDate"
@@ -67,25 +67,25 @@
                     android:orientation="horizontal">
 
                     <com.google.android.material.textview.MaterialTextView
-                        android:maxLines="1"
-                        app:autoSizeTextType="uniform"
-                        app:autoSizeStepGranularity="1sp"
                         android:id="@+id/askRow_LBL_itemCity"
                         android:layout_width="100dp"
                         android:layout_height="wrap_content"
+                        android:maxLines="1"
                         android:text="Tel-Aviv"
-                        android:textSize="18sp" />
+                        android:textSize="18sp"
+                        app:autoSizeStepGranularity="1sp"
+                        app:autoSizeTextType="uniform" />
 
                     <com.google.android.material.textview.MaterialTextView
-                        android:maxLines="1"
-                        app:autoSizeTextType="uniform"
-                        app:autoSizeStepGranularity="1sp"
                         android:id="@+id/askRow_LBL_postDate"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginLeft="20dp"
+                        android:maxLines="1"
                         android:text="14/10/20"
-                        android:textSize="18sp" />
+                        android:textSize="18sp"
+                        app:autoSizeStepGranularity="1sp"
+                        app:autoSizeTextType="uniform" />
 
                 </LinearLayout>
 
