--- a/app/src/main/res/layout/fragment_last_askitem.xml
+++ b/app/src/main/res/layout/fragment_last_askitem.xml
@@ -65,10 +65,12 @@
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
                     android:gravity="center"
-                    android:text="Refrigirator"
                     android:lines="1"
+                    android:text="Refrigirator"
                     android:textSize="19sp"
-                    android:textStyle="bold" />
+                    android:textStyle="bold"
+                    app:autoSizeStepGranularity="1sp"
+                    app:autoSizeTextType="uniform" />
 
                 <com.google.android.material.imageview.ShapeableImageView
                     android:id="@+id/lastAsk_IMG_itemPhoto"
