--- a/app/src/main/res/layout/fragment_last_giveitem.xml
+++ b/app/src/main/res/layout/fragment_last_giveitem.xml
@@ -8,10 +8,10 @@
         android:id="@+id/lastGive_LAY_cardview"
         android:layout_width="180dp"
         android:layout_height="wrap_content"
-        android:layerType="hardware"
-        app:cardCornerRadius="15dp"
         android:clickable="true"
         android:foreground="?attr/selectableItemBackground"
+        android:layerType="hardware"
+        app:cardCornerRadius="15dp"
         app:cardElevation="5dp"
         app:cardMaxElevation="0dp"
         app:cardPreventCornerOverlap="false"
@@ -41,8 +41,8 @@
                     android:drawableTint="@color/white"
                     android:gravity="center"
                     android:text="@string/latest_gift"
-                    android:textSize="19sp"
                     android:textColor="@color/white"
+                    android:textSize="19sp"
                     android:textStyle="bold"
                     app:autoSizeMinTextSize="1px"
                     app:autoSizeTextType="uniform" />
@@ -56,26 +56,32 @@
                 android:layout_gravity="center"
                 android:layout_weight="3.6"
                 android:orientation="vertical"
-                android:paddingTop="5dp">
+                android:paddingStart="5dp"
+                android:paddingTop="5dp"
+                android:paddingEnd="5dp"
+                android:paddingBottom="5dp">
 
                 <TextView
                     android:id="@+id/lastGive_LBL_itemName"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
+                    android:layout_weight="1"
                     android:gravity="center"
-                    android:textStyle="bold"
                     android:lines="1"
                     android:text="Refrigirator"
-                    android:textSize="20sp" />
+                    android:textSize="20sp"
+                    android:textStyle="bold"
+                    app:autoSizeStepGranularity="1sp"
+                    app:autoSizeTextType="uniform" />
 
                 <com.google.android.material.imageview.ShapeableImageView
                     android:id="@+id/lastGive_IMG_itemPhoto"
-                    android:layout_width="100dp"
-                    android:layout_height="100dp"
-                    android:scaleType="fitXY"
-                    android:layout_gravity="center"
-                    android:layout_marginTop="10dp"/>
+                    android:layout_width="match_parent"
+                    android:layout_height="0dp"
+                    android:layout_marginTop="10dp"
+                    android:layout_weight="50"
+                    android:scaleType="fitXY" />
 
 
             </LinearLayout>
