--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -14,21 +14,182 @@
         android:background="@drawable/main_image"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0" />
-
-    <com.google.android.material.imageview.ShapeableImageView
-        android:id="@+id/home_IMG_appLogo"
-        android:layout_width="230dp"
-        android:layout_height="180dp"
-        android:src="@drawable/app_logo"
-        app:layout_constraintBottom_toBottomOf="@+id/home_IMG_mainPicture"
-        app:layout_constraintEnd_toEndOf="@+id/home_IMG_mainPicture"
-        app:layout_constraintHorizontal_bias="0.498"
-        app:layout_constraintStart_toStartOf="@+id/home_IMG_mainPicture"
-        app:layout_constraintTop_toTopOf="@+id/home_IMG_mainPicture"
         app:layout_constraintVertical_bias="0.0" />
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:orientation="vertical"
+        android:paddingStart="5dp"
+        android:paddingEnd="5dp"
+        app:layout_constraintBottom_toTopOf="@+id/adView"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
+
+        <com.google.android.material.imageview.ShapeableImageView
+            android:id="@+id/home_IMG_appLogo"
+            android:layout_width="230dp"
+            android:layout_height="180dp"
+            android:layout_gravity="center"
+            android:src="@drawable/app_logo"
+            app:layout_constraintBottom_toBottomOf="@+id/home_IMG_mainPicture"
+            app:layout_constraintEnd_toEndOf="@+id/home_IMG_mainPicture"
+            app:layout_constraintHorizontal_bias="0.498"
+            app:layout_constraintStart_toStartOf="@+id/home_IMG_mainPicture"
+            app:layout_constraintTop_toTopOf="@+id/home_IMG_mainPicture"
+            app:layout_constraintVertical_bias="0.0" />
+
+        <LinearLayout
+            android:id="@+id/home_LAY_shortcutsLayout"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            app:layout_constraintBottom_toTopOf="@+id/home_LAY_listLayout"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/home_IMG_mainPicture">
+
+            <com.google.android.material.button.MaterialButton
+                android:id="@+id/home_BTN_askItemShortcut"
+                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
+                android:layout_width="0dp"
+                android:layout_height="70dp"
+                android:layout_marginEnd="10dp"
+                android:layout_weight="1"
+                android:backgroundTint="@color/white"
+                android:elevation="5dp"
+                android:gravity="center"
+                android:text="@string/ask_an_item"
+                android:textAllCaps="false"
+                android:textColor="@color/quantum_grey700"
+                app:cornerRadius="30dp"
+                app:elevation="10dp"
+                app:strokeColor="@color/colorPrimary"
+                app:strokeWidth="1.5dp" />
+
+
+            <com.google.android.material.button.MaterialButton
+                android:id="@+id/home_BTN_giveItemShortcut"
+                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
+                android:layout_width="0dp"
+                android:layout_height="70dp"
+                android:layout_marginStart="10dp"
+                android:layout_weight="1"
+                android:backgroundTint="@color/white"
+                android:elevation="5dp"
+                android:gravity="center"
+                android:text="@string/give_an_item"
+                android:textAllCaps="false"
+                android:textColor="@color/quantum_grey700"
+                app:cornerRadius="30dp"
+                app:elevation="10dp"
+                app:strokeColor="@color/colorPrimary"
+                app:strokeWidth="1.5dp" />
+
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:id="@+id/home_LAY_listLayout"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            app:layout_constraintBottom_toTopOf="@+id/home_LAY_framesLayout"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/home_LAY_shortcutsLayout">
+
+            <com.google.android.material.button.MaterialButton
+                android:id="@+id/home_BTN_askItemListShortcut"
+                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
+                android:layout_width="0dp"
+                android:layout_height="70dp"
+                android:layout_marginEnd="10dp"
+                android:layout_weight="1"
+                android:backgroundTint="@color/white"
+                android:elevation="5dp"
+                android:gravity="center"
+                android:text="@string/show_needed_items"
+                android:textAllCaps="false"
+                android:textColor="@color/quantum_grey700"
+                app:cornerRadius="30dp"
+                app:elevation="10dp"
+                app:strokeColor="@color/colorPrimary"
+                app:strokeWidth="1.5dp" />
+
+
+            <com.google.android.material.button.MaterialButton
+                android:id="@+id/home_BTN_giveItemListShortcut"
+                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
+                android:layout_width="0dp"
+                android:layout_height="70dp"
+                android:layout_marginStart="10dp"
+                android:layout_weight="1"
+                android:backgroundTint="@color/white"
+                android:elevation="5dp"
+                android:gravity="center"
+                android:text="@string/show_given_items"
+                android:textAllCaps="false"
+                android:textColor="@color/quantum_grey700"
+                app:cornerRadius="30dp"
+                app:elevation="10dp"
+                app:strokeColor="@color/colorPrimary"
+                app:strokeWidth="1.5dp" />
+
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:id="@+id/home_LAY_framesLayout"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            app:layout_constraintBottom_toTopOf="@+id/adView"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/home_LAY_listLayout">
+
+            <FrameLayout
+                android:id="@+id/home_LAY_lastAsk"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginEnd="10dp"
+                android:layout_weight="1"
+                tools:layout="@layout/fragment_last_askitem" />
+
+            <FrameLayout
+                android:id="@+id/home_LAY_lastGift"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="10dp"
+                android:layout_weight="1" />
+
+
+            <!--        <fragment-->
+            <!--            android:id="@+id/home_LAY_lastGiveItem"-->
+            <!--            android:layout_width="0dp"-->
+            <!--            android:layout_height="wrap_content"-->
+            <!--            android:layout_marginEnd="10dp"-->
+            <!--            android:layout_weight="1"-->
+            <!--            tools:layout="@layout/fragment_last_giveitem" />-->
+
+            <!--        <fragment-->
+            <!--            android:id="@+id/home_LAY_lastAskItem"-->
+            <!--            android:layout_width="0dp"-->
+            <!--            android:layout_height="wrap_content"-->
+            <!--            android:layout_marginStart="10dp"-->
+            <!--            android:layout_weight="1"-->
+            <!--            tools:layout="@layout/fragment_last_askitem" />-->
+
+        </LinearLayout>
+
+
+    </LinearLayout>
+
 
     <TextView
         android:id="@+id/home_LAY_helloLabel"
@@ -44,53 +205,6 @@
         app:layout_constraintTop_toBottomOf="@+id/home_IMG_mainPicture"
         app:layout_constraintVertical_bias="0.0" />
 
-    <FrameLayout
-        android:id="@+id/home_LAY_lastGift"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:layout_constrainedWidth="true"
-        app:layout_constraintBottom_toTopOf="@+id/adView"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toEndOf="@+id/home_LAY_lastAsk"
-        app:layout_constraintTop_toBottomOf="@+id/home_IMG_mainPicture"
-        app:layout_constraintVertical_bias="0.5" />
-
-    <FrameLayout
-        android:id="@+id/home_LAY_lastAsk"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:layout_constrainedWidth="true"
-        app:layout_constraintBottom_toTopOf="@+id/adView"
-        app:layout_constraintEnd_toStartOf="@+id/home_LAY_lastGift"
-        app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/home_IMG_mainPicture"
-        app:layout_constraintVertical_bias="0.5" />
-
-<!--        <fragment-->
-<!--            android:id="@+id/home_LAY_lastGiveItem"-->
-<!--            android:layout_width="wrap_content"-->
-<!--            android:layout_height="wrap_content"-->
-<!--            app:layout_constraintBottom_toTopOf="@+id/adView"-->
-<!--            app:layout_constraintEnd_toEndOf="parent"-->
-<!--            app:layout_constraintHorizontal_bias="0.5"-->
-<!--            app:layout_constraintStart_toEndOf="@+id/home_LAY_lastAskItem"-->
-<!--            app:layout_constraintTop_toBottomOf="@+id/home_IMG_mainPicture"-->
-<!--            app:layout_constraintVertical_bias="0.5"-->
-<!--            tools:layout="@layout/fragment_last_giveitem" />-->
-
-<!--        <fragment-->
-<!--            android:id="@+id/home_LAY_lastAskItem"-->
-<!--            android:layout_width="wrap_content"-->
-<!--            android:layout_height="wrap_content"-->
-<!--            app:layout_constraintBottom_toTopOf="@+id/adView"-->
-<!--            app:layout_constraintEnd_toStartOf="@+id/home_LAY_lastGiveItem"-->
-<!--            app:layout_constraintHorizontal_bias="0.5"-->
-<!--            app:layout_constraintStart_toStartOf="parent"-->
-<!--            app:layout_constraintTop_toBottomOf="@+id/home_IMG_mainPicture"-->
-<!--            app:layout_constraintVertical_bias="0.5"-->
-<!--            tools:layout="@layout/fragment_last_askitem" />-->
 
     <com.google.android.gms.ads.AdView
         android:id="@+id/adView"
@@ -99,11 +213,11 @@
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
         app:adSize="BANNER"
-        app:adUnitId="@string/bottom_banner_id"
+        app:adUnitId="@string/test_app_id"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.99" />
+        app:layout_constraintVertical_bias="1" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
