--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -50,6 +50,9 @@
             android:layout_marginStart="5dp">
 
             <com.google.android.material.textview.MaterialTextView
+                android:maxLines="1"
+                app:autoSizeTextType="uniform"
+                app:autoSizeStepGranularity="1sp"
                 android:id="@+id/profile_LBL_name"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -59,6 +62,9 @@
                 android:textStyle="bold" />
 
             <com.google.android.material.textview.MaterialTextView
+                android:maxLines="1"
+                app:autoSizeTextType="uniform"
+                app:autoSizeStepGranularity="1sp"
                 android:id="@+id/profile_LBL_city"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -67,6 +73,9 @@
                 android:textSize="20sp" />
 
             <com.google.android.material.textview.MaterialTextView
+                android:maxLines="1"
+                app:autoSizeTextType="uniform"
+                app:autoSizeStepGranularity="1sp"
                 android:id="@+id/profile_LBL_phone"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -75,10 +84,12 @@
                 android:textSize="20sp" />
 
             <com.google.android.material.textview.MaterialTextView
+                android:maxLines="1"
+                app:autoSizeTextType="uniform"
+                app:autoSizeStepGranularity="1sp"
                 android:id="@+id/profile_LBL_mail"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:maxLines="1"
                 android:text="@string/user_mail"
                 android:textColor="@color/white"
                 android:textSize="20sp" />
